--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
+    "@angular/material": "5.2.5",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@swimlane/ngx-dnd": "^3.2.0",
     "core-js": "^2.4.1",
     "ng-zorro-antd": "0.7.0-beta.4",
     "rxjs": "^5.5.6",
